# app/Swagger/Schemas.php
@@ -6,6 +6,19 @@ use OpenApi\Annotations as OA;
 
 /**
  * @OA\Schema(
+ *   schema="PaginatedArticles",
+ *   type="object",
+ *   @OA\Property(property="data", type="array", @OA\Items(ref="#/components/schemas/Article")),
+ *   @OA\Property(property="current_page", type="integer"),
+ *   @OA\Property(property="last_page", type="integer"),
+ *   @OA\Property(property="per_page", type="integer"),
+ *   @OA\Property(property="total", type="integer"),
+ *   @OA\Property(property="first_page_url", type="string"),
+ *   @OA\Property(property="last_page_url", type="string"),
+ *   @OA\Property(property="next_page_url", type="string", nullable=true),
+ *   @OA\Property(property="prev_page_url", type="string", nullable=true),
+ * )
+ *
  *   schema="User",
  *   type="object",
  *   @OA\Property(property="id", type="integer"),
